--- a/Portfolio/src/main/resources/application.properties
+++ b/Portfolio/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url= jdbc:mysql://localhost:3306/portfolio?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=#Matiriver2003
+#spring.datasource.url= jdbc:mysql://localhost:3306/portfolio?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=#Matiriver2003
+spring.datasource.url=jdbc:mysql://b8o3yygkkpnjebs9ltgp-mysql.services.clever-cloud.com:3306/b8o3yygkkpnjebs9ltgp
+spring.datasource.username=ufyjr7l0h8mnmb6l
+spring.datasource.password=lP72YbHVbJVmwe224ioO
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
